crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__return__in_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/return/in_function.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @3) [] []
      (block
         (return "ok")
         (print "bad")))
   (print (call +4 (global f @3))))

----- stderr -----
